--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,25 @@ web/node_modules/
 /dist/
 /nbdist/
 /.nb-gradle/
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+web/node_modules
+
+# testing
+web/coverage
+
+# production
+web/build
+
+# misc
+web/.DS_Store
+web/.env.local
+web/.env.development.local
+web/.env.test.local
+web/.env.production.local
+
+web/npm-debug.log*
+web/yarn-debug.log*
+web/yarn-error.log*
