--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,7 @@
 {
   "name": "web",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "antd": "^3.2.3",
     "axios": "^0.18.0",
@@ -26,7 +25,7 @@
   "homepage": "./",
   "proxy": {
     "/api": {
-      "target": "http://localhost:8080",
+      "target": "http://localhost:8083",
       "secure": false,
       "changeOrigin": true
     }
@@ -38,8 +37,7 @@
     "build:production": "REACT_APP_ENV=production npm run build",
     "build:dev": "REACT_APP_ENV=development npm run build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject",
-    "deploy": "mkdir -p ../../backend/src/main/resources/static/ && rm -rf ../../backend/src/main/resources/static/ && cp -R ./build/ ../../backend/src/main/resources/static/"
+    "eject": "react-app-rewired eject"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.0",
@@ -48,7 +46,5 @@
     "standard": "^10.0.3",
     "react-hot-loader": "^3.1.3",
     "react-app-rewire-hot-loader": "^1.0.0"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
