--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.18.0",
     "china-division": "^2.0.0",
     "http-status-codes": "^1.3.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
